--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.25.0",
+    "eslint-plugin-react": "^7.23.2",
     "node-sass": "^5.0.0"
   }
 }
